Feat : delete posts

--- a/dev_disclosures/src/App.css
+++ b/dev_disclosures/src/App.css
@@ -17,3 +17,10 @@
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);}
+
+
+.center {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
