--- a/src/App.css
+++ b/src/App.css
@@ -8,16 +8,16 @@
   padding: 25px;
   color: white;
 }
-
+.explore {
+  background-color: #3e434d
+}
 
 .App-header {
-  /* min-height: 100vh; */
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);}
-
 
 .center {
   display: flex;
