fix : UI input box consistent sizing

--- a/src/App.css
+++ b/src/App.css
@@ -24,3 +24,10 @@
   align-items: center;
   justify-content: center;
 }
+
+input[type="text"] {
+  height: 60px;
+}
+input[type="url"] {
+  height: 60px;
+}
